<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/mainListView"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <LinearLayout android:id="@+id/tabContainer"
                  android:layout_width="fill_parent"
                  android:layout_height="0dip"
                  android:gravity="start"
                  android:layout_weight="1"
            />
</LinearLayout>